# IoT_Sensors

./: .env.docker.example  .gitignore  AGENTS.md  INSTRUCCIONES_ACTUALIZAR_COORDENADAS_DOCKER.md  License.txt  Makefile  README.md  TEST_DATA.md  agente_base_de_datos.md  agente_caso_de_uso.md  agente_diagramas.md  arquitectura.md  docker-compose.yml  documentacion_api.md  documentacion_base_de_datos.md  main.py  openapi.yaml  package-lock.json  plan.md  pyproject.toml
backend/: .coverage  .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2bc2e0e0d4a6_add_password_recovery_tokens.py  39b6df94a95f_add_phase2_thresholds_alerts_audit.py  5e4a43a9b2f1_add_notification_preferences.py  7a66ef728239_flatten_reading.py  8f9c1d2b7a11_add_ai_reports_table.py  b71f4c6e9a22_add_ai_recommendation_fields_to_alerts.py  e26372e1d878_init_12_tables.py
backend/app/: main.py
backend/app/core/: config.py  deps.py  security.py
backend/app/db/: demo_seed.py  seed.py  seed_demo.py  session.py
backend/app/jobs/: ai_report_scheduler.py  inactivity_scheduler.py  notification_scheduler.py
backend/app/models/: __init__.py  ai_report.py  alert.py  audit_log.py  base.py  client.py  crop_cycle.py  crop_type.py  irrigation_area.py  node.py  notification_preference.py  password_reset_token.py  property.py  reading.py  reading_environmental.py  reading_irrigation.py  reading_soil.py  refresh_token.py  threshold.py  user.py
backend/app/schemas/: __init__.py  ai_chat.py  ai_report.py  alert.py  audit_log.py  (+12 more)
backend/tests/: conftest.py
(+197 files in other folders)
