[project]
name = "sensores-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "cryptography>=44.0.0",
    "fastapi>=0.135.1",
    "openpyxl>=3.1.5",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pymysql>=1.1.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "reportlab>=4.4.10",
    "sqlalchemy>=2.0.48",
    "uvicorn[standard]>=0.41.0",
]
